--- a/works/planetarium/pages/typography/index.html
+++ b/works/planetarium/pages/typography/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,700italic|Tinos:400,400italic,700,700italic|Raleway:400,700' rel='stylesheet' type='text/css'>
 
-    <title>Typography Exercise</title>
+    <title>Typography Exercize</title>
     <meta name="description" content="A webpage">
     <meta name="author" content="Aaron Clement">
 
