A new design for the hello section
> Created revised portfolio tag icons yet again, this time with the intent of displaying them above the fold as a bold advertisement of my skills.
> Added back some content that went missing, alarmingly enough.
> Finally added some sort of interesting ambient passive animation to the letter bodies; they now move in response to the user scrolling.
>Optimized the Matter.js simulation by disabling the renderer. I still need to figure out how to remove it entirely.

--- a/works/deco-serv/index.html
+++ b/works/deco-serv/index.html
@@ -66,7 +66,7 @@
             <h1>About us</h1>
             <div class="inner">
                 <div class="block right-image-wrap-block">
-                    <div class="image filler"></div>
+                    <div class="image full-image" style="background-image:url('photos/2-color-bottles.png');"></div>
                     <p>With 50 years of experience in the promotions imprinting world. We invite you to continue to call upon Decorative Services for your imprinting needs.</p>
                     <p>We offer color matching, in-house plate making and graphics.
                     </p>
@@ -99,8 +99,8 @@
             <h1>Services</h1>
             <div class="inner">
                 <div class="block left-image-wrap-block">
-                    <div class="image filler"></div>
-                    <p>As a full service, on-site imprinting company, we offer a variety of decorative services. In addition to pad printing, silk screening and foil stamping, we have a fcully capable graphic department. We can develop new art, revise old art or update existing art. We have a reputation of excellent customer service.</p>
+                    <div class="image full-image" style="background-image:url('photos/pad-printing-glass.png');"></div>
+                    <p>As a full service, on-site imprinting company, we offer a variety of decorative services. In addition to pad printing, silk screening and foil stamping, we have a fully capable graphic department. We can develop new art, revise old art or update existing art. We have a reputation of excellent customer service.</p>
                     <p>There are several factors that determine the type of service adequate for your needs; such as product size, surface, image size, imprint location and number of colors to be imprinted. To learn more about the services offered and see some sample pictures please click on the links below.</p>
                 </div>
 
@@ -125,7 +125,7 @@
                 </div>
                 <div class="inner">
                     <div class="block left-image-block">
-                        <div class="image small-filler"></div>
+                        <div class="image half-image" style="background-image:url('photos/pad-printing-knife.png');"></div>
                         <div class="p-div">
                             <p>Pad Printing is a very versatile method of imprinting. Concave and convex surfaces are easily imprinted with this method, with virtually any substrate.</p>
                         </div>
@@ -159,7 +159,7 @@
                 </div>
                 <div class="inner">
                     <div class="block right-image-block">
-                        <div class="image small-filler"></div>
+                        <div class="image half-image" style="background-image:url('photos/laser-etch.png');"></div>
                         <div class="p-div">
                             <p>Laser engraving produces a mark that is crisp, clean and permanent. Among products that can be engraved are: wood/natural materials, plastics, metals, glass, and stone.</p>
                         </div>
@@ -193,7 +193,7 @@
                 </div>
                 <div class="inner">
                     <div class="block left-image-block">
-                        <div class="image small-filler"></div>
+                        <div class="image half-image" style="background-image:url('photos/red-ink-silkscreen.png');"></div>
                         <div class="p-div">
                             <p>Screen printing can be used for a large variety of substrates. Including painted surfaces, metal, plastic, and paper. Screen printing is best suited for imprinting on flat surfaces.</p>
                         </div>
@@ -215,7 +215,7 @@
         <div class="relative h2-ribbon">
             <div class="foil-stamping"><img class='svg' src="vectors/h2-ribbon.svg">
                 <div class="ribbon-inner">
-                    <h2>Foil Stamping</h2></div>
+                    <h2>Heat Transfers</h2></div>
             </div>
         </div>
 
@@ -226,7 +226,7 @@
                 </div>
                 <div class="inner">
                     <div class="block right-image-block">
-                        <div class="image small-filler"></div>
+                        <div class="image half-image" style="background-image:url('photos/heat-transfer.png');"></div>
                         <div class="p-div">
                             <p>Foil Stamping provides the best visual appearance for metallics of all shades. The best substrates for foil stamping are plastics, paper goods, vinyl, leather and leatherette.</p>
                         </div>
